GNOME Bugzilla – Bug 708456
entry appears when clicking Download place in sidebar
Last modified: 2014-01-06 17:21:53 UTC
Created attachment 255401 [details] screenshot When I open the app and click from Home to Downloads in the sidebar a strange entry box appears in the headerbar. Once it is there it doesn't go away.
*** Bug 708530 has been marked as a duplicate of this bug. ***
(In reply to comment #1) > *** Bug 708530 has been marked as a duplicate of this bug. *** Note that this bug had some further reaching Stack Traces about 'after effects' of the Location Bar appearing (which appears to be 'optical' only). There are multiple ways to badly crash nautilus afterwards.
Managed to trace that one down a bit further, closing in to it: the 'offending' extension on nautilus is gnome-user-share (gdb) bt
+ Trace 232534
(will try to get the missing debug symbols... but I think it's much more worth than what we had before).
Created attachment 255651 [details] [review] trivial: fix logic error The bar should become visible if we are EITHER in Downloads OR in PUBLIC. Fixes bug 708456, which is about very strange crashes when entering 'Downloads'
(In reply to comment #4) > Created an attachment (id=255651) [details] [review] > trivial: fix logic error > > The bar should become visible if we are EITHER in Downloads OR in > PUBLIC. This patch changes the logic of a code-piece living there for > 4 years... no idea why this would not crash that badly, but the logic looks obviously wrong (we are likely NEVER in Public && Downloads at the same time). I only did very few testing with this patch so far, but I can enter and leave 'Downloads' without side-effects so far.
-> gnome-user-share
Review of attachment 255651 [details] [review]: patch looks wrong to me; the condition is supposed to catch the case that a folder is both 'downloads' and 'public', so the && is correct.
Created attachment 258235 [details] [review] Check whether bar is NULL before assigning anything into it This bug happens when bluetooth support is disabled. The current flow doesn't check the 'bar' object before connecting signals and do some other work for it and assumes that it is already created.
Created attachment 259324 [details] [review] share-bar: Check whether bar is NULL before using it
Attachment 259324 [details] pushed as 3b1d2a5 - share-bar: Check whether bar is NULL before using it
*** Bug 721645 has been marked as a duplicate of this bug. ***