share-bar: Check whether bar is NULL before using it

https://bugzilla.gnome.org/show_bug.cgi?id=708456